// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScannerErrorsView when components prop is set to an empty array renders no table 1`] = `
"<div>
  <div class=\\"card my-3\\">
    <!---->
    <!---->
    <div class=\\"list-group\\">
      <div class=\\"list-group-item list-group-item-success\\"><span class=\\"\\">0</span>
        errors
      </div>
    </div>
    <!---->
    <!---->
  </div>
  <!---->
  <div class=\\"card my-3\\">
    <!---->
    <!---->
    <div class=\\"card-body\\">
      <h4 class=\\"card-title\\">0 Errors</h4>
      <!---->
      <!---->
    </div>
    <!---->
    <!---->
  </div>
</div>"
`;

exports[`ScannerErrorsView when components prop is set to multiple components with scanner errors renders all the scanner errors in a table 1`] = `
"<div>
  <div class=\\"card my-3\\">
    <!---->
    <!---->
    <div class=\\"list-group\\">
      <div class=\\"list-group-item list-group-item-danger\\"><span class=\\"display-1\\">6</span>
        errors
      </div>
    </div>
    <!---->
    <!---->
  </div>
  <div class=\\"mt-3 mb-4\\" components=\\"[object Object],[object Object],[object Object]\\"> <button id=\\"toggleFilters\\" type=\\"button\\" class=\\"btn btn-primary collapsed\\" aria-expanded=\\"false\\" aria-controls=\\"filters\\"><svg viewBox=\\"0 0 16 16\\" width=\\"1em\\" height=\\"1em\\" focusable=\\"false\\" role=\\"img\\" aria-label=\\"blank\\" aria-hidden=\\"true\\" xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"currentColor\\" class=\\"bi-blank b-icon bi\\">
        <g></g>
      </svg> Filters
    </button>
    <transition-stub css=\\"true\\" enterclass=\\"\\" leaveclass=\\"collapse show\\" entertoclass=\\"collapse show\\" leavetoclass=\\"collapse\\" enteractiveclass=\\"collapsing\\" leaveactiveclass=\\"collapsing\\" class=\\"mt-3\\">
      <div id=\\"filters\\" class=\\"collapse\\" style=\\"display: none;\\">
        <div class=\\"card-columns\\">
          <!---->
          <!---->
          <!---->
          <div class=\\"card bg-secondary\\">
            <!---->
            <!---->
            <div class=\\"card-body\\">
              <!---->
              <!---->
              <fieldset class=\\"form-group\\" id=\\"__BVID__15\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__15__BV_label_\\">Teams</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__16\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-1\\" id=\\"__BVID__16_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__16_BV_option_0\\"><span>test-team-id-1-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-2\\" id=\\"__BVID__16_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__16_BV_option_1\\"><span>test-team-id-1-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-1\\" id=\\"__BVID__16_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__16_BV_option_2\\"><span>test-team-id-2-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-2\\" id=\\"__BVID__16_BV_option_3\\"><label class=\\"custom-control-label\\" for=\\"__BVID__16_BV_option_3\\"><span>test-team-id-2-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-3-1\\" id=\\"__BVID__16_BV_option_4\\"><label class=\\"custom-control-label\\" for=\\"__BVID__16_BV_option_4\\"><span>test-team-id-3-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-3-2\\" id=\\"__BVID__16_BV_option_5\\"><label class=\\"custom-control-label\\" for=\\"__BVID__16_BV_option_5\\"><span>test-team-id-3-2</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
          <div class=\\"card bg-secondary\\">
            <!---->
            <!---->
            <div class=\\"card-body\\">
              <!---->
              <!---->
              <fieldset class=\\"form-group\\" id=\\"__BVID__23\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__23__BV_label_\\">Tags</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__24\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-1\\" id=\\"__BVID__24_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__24_BV_option_0\\"><span>test-tag-1-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-2\\" id=\\"__BVID__24_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__24_BV_option_1\\"><span>test-tag-1-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-1\\" id=\\"__BVID__24_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__24_BV_option_2\\"><span>test-tag-2-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-2\\" id=\\"__BVID__24_BV_option_3\\"><label class=\\"custom-control-label\\" for=\\"__BVID__24_BV_option_3\\"><span>test-tag-2-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-3-1\\" id=\\"__BVID__24_BV_option_4\\"><label class=\\"custom-control-label\\" for=\\"__BVID__24_BV_option_4\\"><span>test-tag-3-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-3-2\\" id=\\"__BVID__24_BV_option_5\\"><label class=\\"custom-control-label\\" for=\\"__BVID__24_BV_option_5\\"><span>test-tag-3-2</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
          <div class=\\"card bg-secondary\\">
            <!---->
            <!---->
            <div class=\\"card-body\\">
              <!---->
              <!---->
              <fieldset class=\\"form-group\\" id=\\"__BVID__31\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__31__BV_label_\\">Component Types</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__32\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-1\\" id=\\"__BVID__32_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__32_BV_option_0\\"><span>test-component-type-id-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-2\\" id=\\"__BVID__32_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__32_BV_option_1\\"><span>test-component-type-id-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-3\\" id=\\"__BVID__32_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__32_BV_option_2\\"><span>test-component-type-id-3</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
          <div class=\\"card bg-secondary\\">
            <!---->
            <!---->
            <div class=\\"card-body\\">
              <!---->
              <!---->
              <fieldset class=\\"form-group\\" id=\\"__BVID__36\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__36__BV_label_\\">Platforms</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__37\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"undefined\\" id=\\"__BVID__37_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__37_BV_option_0\\"><span>undefined</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
          <div class=\\"card bg-secondary\\">
            <!---->
            <!---->
            <div class=\\"card-body\\">
              <!---->
              <!---->
              <div role=\\"group\\" class=\\"form-group\\" id=\\"__BVID__39\\"><label for=\\"component-filter\\" class=\\"d-block\\" id=\\"__BVID__39__BV_label_\\">Component</label>
                <div><select id=\\"component-filter\\" class=\\"custom-select custom-select-sm\\">
                    <option value=\\"\\">Please select a component</option>
                    <option value=\\"test-component-id-1\\">test-component-id-1</option>
                    <option value=\\"test-component-id-2\\">test-component-id-2</option>
                    <option value=\\"test-component-id-3\\">test-component-id-3</option>
                  </select>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </div>
            </div>
            <!---->
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
  <div class=\\"card my-3\\">
    <!---->
    <!---->
    <div class=\\"card-body\\">
      <h4 class=\\"card-title\\">6 Errors</h4>
      <!---->
      <table class=\\"table table-dark\\">
        <thead>
          <tr>
            <th class=\\"component table-primary\\">Component</th>
            <th class=\\"scanner\\">Scanner</th>
            <th class=\\"teams\\">Teams</th>
            <th class=\\"error\\">Error</th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-1\\">Test Component Name 1</a></td>
            <td class=\\"scanner\\">test-scanner-id-1-1</td>
            <td class=\\"teams\\">
              <ul>
                <li><a href=\\"/teams/test-team-id-1-1\\" class=\\"team-name\\">test-team-id-1-1</a>
                  <!---->
                  <!---->
                </li>
                <li><a href=\\"/teams/test-team-id-1-2\\" class=\\"team-name\\">test-team-id-1-2</a>
                  <!---->
                  <!---->
                </li>
              </ul>
            </td>
            <td class=\\"error\\">
              <ul>
                <li>
                  Test Scanner Error Message 1 1
                </li>
                <li>
                  Test Scanner Error Message 1 1 2
                </li>
              </ul>
            </td>
          </tr>
          <tr>
            <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-1\\">Test Component Name 1</a></td>
            <td class=\\"scanner\\">test-scanner-id-1-2</td>
            <td class=\\"teams\\">
              <ul>
                <li><a href=\\"/teams/test-team-id-1-1\\" class=\\"team-name\\">test-team-id-1-1</a>
                  <!---->
                  <!---->
                </li>
                <li><a href=\\"/teams/test-team-id-1-2\\" class=\\"team-name\\">test-team-id-1-2</a>
                  <!---->
                  <!---->
                </li>
              </ul>
            </td>
            <td class=\\"error\\">
              <ul>
                <li>
                  Test Scanner Error Message 1 2
                </li>
                <li>
                  Test Scanner Error Message 1 2 2
                </li>
              </ul>
            </td>
          </tr>
          <tr>
            <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-2\\">Test Component Name 2</a></td>
            <td class=\\"scanner\\">test-scanner-id-2-1</td>
            <td class=\\"teams\\">
              <ul>
                <li><a href=\\"/teams/test-team-id-2-1\\" class=\\"team-name\\">test-team-id-2-1</a>
                  <!---->
                  <!---->
                </li>
                <li><a href=\\"/teams/test-team-id-2-2\\" class=\\"team-name\\">test-team-id-2-2</a>
                  <!---->
                  <!---->
                </li>
              </ul>
            </td>
            <td class=\\"error\\">
              <ul>
                <li>
                  Test Scanner Error Message 2 1
                </li>
                <li>
                  Test Scanner Error Message 2 1 2
                </li>
              </ul>
            </td>
          </tr>
          <tr>
            <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-2\\">Test Component Name 2</a></td>
            <td class=\\"scanner\\">test-scanner-id-2-2</td>
            <td class=\\"teams\\">
              <ul>
                <li><a href=\\"/teams/test-team-id-2-1\\" class=\\"team-name\\">test-team-id-2-1</a>
                  <!---->
                  <!---->
                </li>
                <li><a href=\\"/teams/test-team-id-2-2\\" class=\\"team-name\\">test-team-id-2-2</a>
                  <!---->
                  <!---->
                </li>
              </ul>
            </td>
            <td class=\\"error\\">
              <ul>
                <li>
                  Test Scanner Error Message 2 2
                </li>
                <li>
                  Test Scanner Error Message 2 2 2
                </li>
              </ul>
            </td>
          </tr>
          <tr>
            <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-3\\">Test Component Name 3</a></td>
            <td class=\\"scanner\\">test-scanner-id-3-1</td>
            <td class=\\"teams\\">
              <ul>
                <li><a href=\\"/teams/test-team-id-3-1\\" class=\\"team-name\\">test-team-id-3-1</a>
                  <!---->
                  <!---->
                </li>
                <li><a href=\\"/teams/test-team-id-3-2\\" class=\\"team-name\\">test-team-id-3-2</a>
                  <!---->
                  <!---->
                </li>
              </ul>
            </td>
            <td class=\\"error\\">
              <ul>
                <li>
                  Test Scanner Error Message 3 1
                </li>
                <li>
                  Test Scanner Error Message 3 1 2
                </li>
              </ul>
            </td>
          </tr>
          <tr>
            <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-3\\">Test Component Name 3</a></td>
            <td class=\\"scanner\\">test-scanner-id-3-2</td>
            <td class=\\"teams\\">
              <ul>
                <li><a href=\\"/teams/test-team-id-3-1\\" class=\\"team-name\\">test-team-id-3-1</a>
                  <!---->
                  <!---->
                </li>
                <li><a href=\\"/teams/test-team-id-3-2\\" class=\\"team-name\\">test-team-id-3-2</a>
                  <!---->
                  <!---->
                </li>
              </ul>
            </td>
            <td class=\\"error\\">
              <ul>
                <li>
                  Test Scanner Error Message 3 2
                </li>
                <li>
                  Test Scanner Error Message 3 2 2
                </li>
              </ul>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <!---->
    <!---->
  </div>
</div>"
`;

exports[`ScannerErrorsView when components prop is set to multiple components with scanner errors when selecting a filter, the filter is applied to the scanner errors in the table 1`] = `
"<div>
  <div class=\\"card my-3\\">
    <!---->
    <!---->
    <div class=\\"list-group\\">
      <div class=\\"list-group-item list-group-item-danger\\"><span class=\\"display-1\\">6</span>
        errors
      </div>
    </div>
    <!---->
    <!---->
  </div>
  <div class=\\"mt-3 mb-4\\" components=\\"[object Object],[object Object],[object Object]\\"> <button id=\\"toggleFilters\\" type=\\"button\\" class=\\"btn btn-primary collapsed\\" aria-expanded=\\"false\\" aria-controls=\\"filters\\"><svg viewBox=\\"0 0 16 16\\" width=\\"1em\\" height=\\"1em\\" focusable=\\"false\\" role=\\"img\\" aria-label=\\"blank\\" aria-hidden=\\"true\\" xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"currentColor\\" class=\\"bi-blank b-icon bi\\">
        <g></g>
      </svg> Filters
    </button>
    <transition-stub css=\\"true\\" enterclass=\\"\\" leaveclass=\\"collapse show\\" entertoclass=\\"collapse show\\" leavetoclass=\\"collapse\\" enteractiveclass=\\"collapsing\\" leaveactiveclass=\\"collapsing\\" class=\\"mt-3\\">
      <div id=\\"filters\\" class=\\"collapse\\" style=\\"display: none;\\">
        <div class=\\"card-columns\\">
          <!---->
          <!---->
          <!---->
          <div class=\\"card bg-secondary\\">
            <!---->
            <!---->
            <div class=\\"card-body\\">
              <!---->
              <!---->
              <fieldset class=\\"form-group\\" id=\\"__BVID__73\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__73__BV_label_\\">Teams</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__74\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-1\\" id=\\"__BVID__74_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__74_BV_option_0\\"><span>test-team-id-1-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-2\\" id=\\"__BVID__74_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__74_BV_option_1\\"><span>test-team-id-1-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-1\\" id=\\"__BVID__74_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__74_BV_option_2\\"><span>test-team-id-2-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-2\\" id=\\"__BVID__74_BV_option_3\\"><label class=\\"custom-control-label\\" for=\\"__BVID__74_BV_option_3\\"><span>test-team-id-2-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-3-1\\" id=\\"__BVID__74_BV_option_4\\"><label class=\\"custom-control-label\\" for=\\"__BVID__74_BV_option_4\\"><span>test-team-id-3-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-3-2\\" id=\\"__BVID__74_BV_option_5\\"><label class=\\"custom-control-label\\" for=\\"__BVID__74_BV_option_5\\"><span>test-team-id-3-2</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
          <div class=\\"card bg-secondary\\">
            <!---->
            <!---->
            <div class=\\"card-body\\">
              <!---->
              <!---->
              <fieldset class=\\"form-group\\" id=\\"__BVID__81\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__81__BV_label_\\">Tags</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__82\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-1\\" id=\\"__BVID__82_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__82_BV_option_0\\"><span>test-tag-1-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-2\\" id=\\"__BVID__82_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__82_BV_option_1\\"><span>test-tag-1-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-1\\" id=\\"__BVID__82_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__82_BV_option_2\\"><span>test-tag-2-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-2\\" id=\\"__BVID__82_BV_option_3\\"><label class=\\"custom-control-label\\" for=\\"__BVID__82_BV_option_3\\"><span>test-tag-2-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-3-1\\" id=\\"__BVID__82_BV_option_4\\"><label class=\\"custom-control-label\\" for=\\"__BVID__82_BV_option_4\\"><span>test-tag-3-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-3-2\\" id=\\"__BVID__82_BV_option_5\\"><label class=\\"custom-control-label\\" for=\\"__BVID__82_BV_option_5\\"><span>test-tag-3-2</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
          <div class=\\"card bg-secondary\\">
            <!---->
            <!---->
            <div class=\\"card-body\\">
              <!---->
              <!---->
              <fieldset class=\\"form-group\\" id=\\"__BVID__89\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__89__BV_label_\\">Component Types</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__90\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-1\\" id=\\"__BVID__90_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__90_BV_option_0\\"><span>test-component-type-id-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-2\\" id=\\"__BVID__90_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__90_BV_option_1\\"><span>test-component-type-id-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-3\\" id=\\"__BVID__90_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__90_BV_option_2\\"><span>test-component-type-id-3</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
          <div class=\\"card bg-secondary\\">
            <!---->
            <!---->
            <div class=\\"card-body\\">
              <!---->
              <!---->
              <fieldset class=\\"form-group\\" id=\\"__BVID__94\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__94__BV_label_\\">Platforms</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__95\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"undefined\\" id=\\"__BVID__95_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__95_BV_option_0\\"><span>undefined</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
          <div class=\\"card bg-secondary\\">
            <!---->
            <!---->
            <div class=\\"card-body\\">
              <!---->
              <!---->
              <div role=\\"group\\" class=\\"form-group\\" id=\\"__BVID__97\\"><label for=\\"component-filter\\" class=\\"d-block\\" id=\\"__BVID__97__BV_label_\\">Component</label>
                <div><select id=\\"component-filter\\" class=\\"custom-select custom-select-sm\\">
                    <option value=\\"\\">Please select a component</option>
                    <option value=\\"test-component-id-1\\">test-component-id-1</option>
                    <option value=\\"test-component-id-2\\">test-component-id-2</option>
                    <option value=\\"test-component-id-3\\">test-component-id-3</option>
                  </select>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </div>
            </div>
            <!---->
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
  <div class=\\"card my-3\\">
    <!---->
    <!---->
    <div class=\\"card-body\\">
      <h4 class=\\"card-title\\">6 Errors</h4>
      <!---->
      <table class=\\"table table-dark\\">
        <thead>
          <tr>
            <th class=\\"component table-primary\\">Component</th>
            <th class=\\"scanner\\">Scanner</th>
            <th class=\\"teams\\">Teams</th>
            <th class=\\"error\\">Error</th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-1\\">Test Component Name 1</a></td>
            <td class=\\"scanner\\">test-scanner-id-1-1</td>
            <td class=\\"teams\\">
              <ul>
                <li><a href=\\"/teams/test-team-id-1-1\\" class=\\"team-name\\">test-team-id-1-1</a>
                  <!---->
                  <!---->
                </li>
                <li><a href=\\"/teams/test-team-id-1-2\\" class=\\"team-name\\">test-team-id-1-2</a>
                  <!---->
                  <!---->
                </li>
              </ul>
            </td>
            <td class=\\"error\\">
              <ul>
                <li>
                  Test Scanner Error Message 1 1
                </li>
                <li>
                  Test Scanner Error Message 1 1 2
                </li>
              </ul>
            </td>
          </tr>
          <tr>
            <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-1\\">Test Component Name 1</a></td>
            <td class=\\"scanner\\">test-scanner-id-1-2</td>
            <td class=\\"teams\\">
              <ul>
                <li><a href=\\"/teams/test-team-id-1-1\\" class=\\"team-name\\">test-team-id-1-1</a>
                  <!---->
                  <!---->
                </li>
                <li><a href=\\"/teams/test-team-id-1-2\\" class=\\"team-name\\">test-team-id-1-2</a>
                  <!---->
                  <!---->
                </li>
              </ul>
            </td>
            <td class=\\"error\\">
              <ul>
                <li>
                  Test Scanner Error Message 1 2
                </li>
                <li>
                  Test Scanner Error Message 1 2 2
                </li>
              </ul>
            </td>
          </tr>
          <tr>
            <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-2\\">Test Component Name 2</a></td>
            <td class=\\"scanner\\">test-scanner-id-2-1</td>
            <td class=\\"teams\\">
              <ul>
                <li><a href=\\"/teams/test-team-id-2-1\\" class=\\"team-name\\">test-team-id-2-1</a>
                  <!---->
                  <!---->
                </li>
                <li><a href=\\"/teams/test-team-id-2-2\\" class=\\"team-name\\">test-team-id-2-2</a>
                  <!---->
                  <!---->
                </li>
              </ul>
            </td>
            <td class=\\"error\\">
              <ul>
                <li>
                  Test Scanner Error Message 2 1
                </li>
                <li>
                  Test Scanner Error Message 2 1 2
                </li>
              </ul>
            </td>
          </tr>
          <tr>
            <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-2\\">Test Component Name 2</a></td>
            <td class=\\"scanner\\">test-scanner-id-2-2</td>
            <td class=\\"teams\\">
              <ul>
                <li><a href=\\"/teams/test-team-id-2-1\\" class=\\"team-name\\">test-team-id-2-1</a>
                  <!---->
                  <!---->
                </li>
                <li><a href=\\"/teams/test-team-id-2-2\\" class=\\"team-name\\">test-team-id-2-2</a>
                  <!---->
                  <!---->
                </li>
              </ul>
            </td>
            <td class=\\"error\\">
              <ul>
                <li>
                  Test Scanner Error Message 2 2
                </li>
                <li>
                  Test Scanner Error Message 2 2 2
                </li>
              </ul>
            </td>
          </tr>
          <tr>
            <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-3\\">Test Component Name 3</a></td>
            <td class=\\"scanner\\">test-scanner-id-3-1</td>
            <td class=\\"teams\\">
              <ul>
                <li><a href=\\"/teams/test-team-id-3-1\\" class=\\"team-name\\">test-team-id-3-1</a>
                  <!---->
                  <!---->
                </li>
                <li><a href=\\"/teams/test-team-id-3-2\\" class=\\"team-name\\">test-team-id-3-2</a>
                  <!---->
                  <!---->
                </li>
              </ul>
            </td>
            <td class=\\"error\\">
              <ul>
                <li>
                  Test Scanner Error Message 3 1
                </li>
                <li>
                  Test Scanner Error Message 3 1 2
                </li>
              </ul>
            </td>
          </tr>
          <tr>
            <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-3\\">Test Component Name 3</a></td>
            <td class=\\"scanner\\">test-scanner-id-3-2</td>
            <td class=\\"teams\\">
              <ul>
                <li><a href=\\"/teams/test-team-id-3-1\\" class=\\"team-name\\">test-team-id-3-1</a>
                  <!---->
                  <!---->
                </li>
                <li><a href=\\"/teams/test-team-id-3-2\\" class=\\"team-name\\">test-team-id-3-2</a>
                  <!---->
                  <!---->
                </li>
              </ul>
            </td>
            <td class=\\"error\\">
              <ul>
                <li>
                  Test Scanner Error Message 3 2
                </li>
                <li>
                  Test Scanner Error Message 3 2 2
                </li>
              </ul>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <!---->
    <!---->
  </div>
</div>"
`;

exports[`ScannerErrorsView when components prop is set to multiple components with scanner errors when selecting a filter, the filter is applied to the scanner errors in the table 2`] = `
"<div>
  <div class=\\"card my-3\\">
    <!---->
    <!---->
    <div class=\\"list-group\\">
      <div class=\\"list-group-item list-group-item-danger\\"><span class=\\"display-1\\">2</span>
        errors
      </div>
    </div>
    <!---->
    <!---->
  </div>
  <div class=\\"mt-3 mb-4\\" components=\\"[object Object],[object Object],[object Object]\\"> <button id=\\"toggleFilters\\" type=\\"button\\" class=\\"btn btn-primary collapsed\\" aria-expanded=\\"false\\" aria-controls=\\"filters\\"><svg viewBox=\\"0 0 16 16\\" width=\\"1em\\" height=\\"1em\\" focusable=\\"false\\" role=\\"img\\" aria-label=\\"blank\\" aria-hidden=\\"true\\" xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"currentColor\\" class=\\"bi-blank b-icon bi\\">
        <g></g>
      </svg> Filters
    </button>
    <transition-stub css=\\"true\\" enterclass=\\"\\" leaveclass=\\"collapse show\\" entertoclass=\\"collapse show\\" leavetoclass=\\"collapse\\" enteractiveclass=\\"collapsing\\" leaveactiveclass=\\"collapsing\\" class=\\"mt-3\\">
      <div id=\\"filters\\" class=\\"collapse\\" style=\\"display: none;\\">
        <div class=\\"card-columns\\">
          <!---->
          <!---->
          <!---->
          <div class=\\"card bg-secondary\\">
            <!---->
            <!---->
            <div class=\\"card-body\\">
              <!---->
              <!---->
              <fieldset class=\\"form-group\\" id=\\"__BVID__73\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__73__BV_label_\\">Teams</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__74\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-1\\" id=\\"__BVID__74_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__74_BV_option_0\\"><span>test-team-id-1-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-2\\" id=\\"__BVID__74_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__74_BV_option_1\\"><span>test-team-id-1-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-1\\" id=\\"__BVID__74_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__74_BV_option_2\\"><span>test-team-id-2-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-2\\" id=\\"__BVID__74_BV_option_3\\"><label class=\\"custom-control-label\\" for=\\"__BVID__74_BV_option_3\\"><span>test-team-id-2-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-3-1\\" id=\\"__BVID__74_BV_option_4\\"><label class=\\"custom-control-label\\" for=\\"__BVID__74_BV_option_4\\"><span>test-team-id-3-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-3-2\\" id=\\"__BVID__74_BV_option_5\\"><label class=\\"custom-control-label\\" for=\\"__BVID__74_BV_option_5\\"><span>test-team-id-3-2</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
          <div class=\\"card bg-secondary\\">
            <!---->
            <!---->
            <div class=\\"card-body\\">
              <!---->
              <!---->
              <fieldset class=\\"form-group\\" id=\\"__BVID__81\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__81__BV_label_\\">Tags</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__82\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-1\\" id=\\"__BVID__82_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__82_BV_option_0\\"><span>test-tag-1-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-2\\" id=\\"__BVID__82_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__82_BV_option_1\\"><span>test-tag-1-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-1\\" id=\\"__BVID__82_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__82_BV_option_2\\"><span>test-tag-2-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-2\\" id=\\"__BVID__82_BV_option_3\\"><label class=\\"custom-control-label\\" for=\\"__BVID__82_BV_option_3\\"><span>test-tag-2-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-3-1\\" id=\\"__BVID__82_BV_option_4\\"><label class=\\"custom-control-label\\" for=\\"__BVID__82_BV_option_4\\"><span>test-tag-3-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-3-2\\" id=\\"__BVID__82_BV_option_5\\"><label class=\\"custom-control-label\\" for=\\"__BVID__82_BV_option_5\\"><span>test-tag-3-2</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
          <div class=\\"card bg-secondary\\">
            <!---->
            <!---->
            <div class=\\"card-body\\">
              <!---->
              <!---->
              <fieldset class=\\"form-group\\" id=\\"__BVID__89\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__89__BV_label_\\">Component Types</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__90\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-1\\" id=\\"__BVID__90_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__90_BV_option_0\\"><span>test-component-type-id-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-2\\" id=\\"__BVID__90_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__90_BV_option_1\\"><span>test-component-type-id-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-3\\" id=\\"__BVID__90_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__90_BV_option_2\\"><span>test-component-type-id-3</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
          <div class=\\"card bg-secondary\\">
            <!---->
            <!---->
            <div class=\\"card-body\\">
              <!---->
              <!---->
              <fieldset class=\\"form-group\\" id=\\"__BVID__94\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__94__BV_label_\\">Platforms</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__95\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"undefined\\" id=\\"__BVID__95_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__95_BV_option_0\\"><span>undefined</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
          <div class=\\"card bg-secondary\\">
            <!---->
            <!---->
            <div class=\\"card-body\\">
              <!---->
              <!---->
              <div role=\\"group\\" class=\\"form-group\\" id=\\"__BVID__97\\"><label for=\\"component-filter\\" class=\\"d-block\\" id=\\"__BVID__97__BV_label_\\">Component</label>
                <div><select id=\\"component-filter\\" class=\\"custom-select custom-select-sm\\">
                    <option value=\\"\\">Please select a component</option>
                    <option value=\\"test-component-id-1\\">test-component-id-1</option>
                    <option value=\\"test-component-id-2\\">test-component-id-2</option>
                    <option value=\\"test-component-id-3\\">test-component-id-3</option>
                  </select>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </div>
            </div>
            <!---->
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
  <div class=\\"card my-3\\">
    <!---->
    <!---->
    <div class=\\"card-body\\">
      <h4 class=\\"card-title\\">2 Errors</h4>
      <!---->
      <table class=\\"table table-dark\\">
        <thead>
          <tr>
            <th class=\\"component table-primary\\">Component</th>
            <th class=\\"scanner\\">Scanner</th>
            <th class=\\"teams\\">Teams</th>
            <th class=\\"error\\">Error</th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-1\\">Test Component Name 1</a></td>
            <td class=\\"scanner\\">test-scanner-id-1-1</td>
            <td class=\\"teams\\">
              <ul>
                <li><a href=\\"/teams/test-team-id-1-1\\" class=\\"team-name\\">test-team-id-1-1</a>
                  <!---->
                  <!---->
                </li>
                <li><a href=\\"/teams/test-team-id-1-2\\" class=\\"team-name\\">test-team-id-1-2</a>
                  <!---->
                  <!---->
                </li>
              </ul>
            </td>
            <td class=\\"error\\">
              <ul>
                <li>
                  Test Scanner Error Message 1 1
                </li>
                <li>
                  Test Scanner Error Message 1 1 2
                </li>
              </ul>
            </td>
          </tr>
          <tr>
            <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-1\\">Test Component Name 1</a></td>
            <td class=\\"scanner\\">test-scanner-id-1-2</td>
            <td class=\\"teams\\">
              <ul>
                <li><a href=\\"/teams/test-team-id-1-1\\" class=\\"team-name\\">test-team-id-1-1</a>
                  <!---->
                  <!---->
                </li>
                <li><a href=\\"/teams/test-team-id-1-2\\" class=\\"team-name\\">test-team-id-1-2</a>
                  <!---->
                  <!---->
                </li>
              </ul>
            </td>
            <td class=\\"error\\">
              <ul>
                <li>
                  Test Scanner Error Message 1 2
                </li>
                <li>
                  Test Scanner Error Message 1 2 2
                </li>
              </ul>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <!---->
    <!---->
  </div>
</div>"
`;
